RESOLVED FIXED131139
Fix over-retain in SharedBufferCF's createCFData().
https://bugs.webkit.org/show_bug.cgi?id=131139
Summary Fix over-retain in SharedBufferCF's createCFData().
Andreas Kling
Reported 2014-04-02 16:46:03 PDT
Fix over-retain in SharedBufferCF's createCFData().
Attachments
Patch (1.30 KB, patch)
2014-04-02 16:46 PDT, Andreas Kling
andersca: review+
Andreas Kling
Comment 1 2014-04-02 16:46:27 PDT
Anders Carlsson
Comment 2 2014-04-02 16:47:53 PDT
Comment on attachment 228445 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=228445&action=review > Source/WebCore/platform/cf/SharedBufferCF.cpp:58 > return m_cfData.get(); Can you just return m_cfData here?
Andreas Kling
Comment 3 2014-04-03 15:57:15 PDT
Note You need to log in before you can comment on or make changes to this bug.