Fix over-retain in SharedBufferCF's createCFData(). <https://webkit.org/b/131139>

Constructing the return type (RetainPtr<CFDataRef>) will also retain
the pointee, so this would end up leaking.

Reviewed by Anders Carlsson.

* platform/cf/SharedBufferCF.cpp:
(WebCore::SharedBuffer::createCFData):

Canonical link: https://commits.webkit.org/149249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166751 268f45cc-cd09-0410-ab3c-d52691b4dbfc